fix: improve the color contrast of pagination links (resolves #397) (#398)

--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -31,6 +31,7 @@
 		border: 0;
 		border-radius: 100%;
 		box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
+		color: $green-dark;
 		float: left;
 		font-size: rem(18);
 		font-weight: 400;
